@@ -120,24 +120,33 @@ local creatures = {
 e:SetScript("OnEvent", function(self, event, ...)
 	if event == "GOSSIP_SHOW" then
 		if IsModifierKeyDown() then return end
-		local index = 1
-		local unitGUID = UnitGUID("target") or UnitGUID("mouseover")
-		if unitGUID then
-			local _, _, _, _, _, npcID = strsplit("-", unitGUID); npcID = tonumber(npcID)
-			local gossipOptions = C_GossipInfo.GetOptions()
-			for index, gossipOptionsSubTable in ipairs(gossipOptions) do
-				for i = 1, 2 do
-					for j = 1, #creatures[i]["gossips"] do
-						if string.find(string.lower(gossipOptionsSubTable["name"]), string.lower(creatures[i]["gossips"][j])) then
-							C_GossipInfo.SelectOption(index)
+		local numActiveQuests = C_GossipInfo.GetNumActiveQuests()
+		if numActiveQuests > 0 then
+			C_Timer.After(0, function()
+				C_Timer.After(0.5, function()
+					-- Do nothing here, we just want a slight delay to let active quests be handled first.
+				end)
+			end)
+		else
+			local index = 1
+			local unitGUID = UnitGUID("target") or UnitGUID("mouseover")
+			if unitGUID then
+				local _, _, _, _, _, npcID = strsplit("-", unitGUID); npcID = tonumber(npcID)
+				local gossipOptions = C_GossipInfo.GetOptions()
+				for index, gossipOptionsSubTable in ipairs(gossipOptions) do
+					for i = 1, 2 do
+						for j = 1, #creatures[i]["gossips"] do
+							if string.find(string.lower(gossipOptionsSubTable["name"]), string.lower(creatures[i]["gossips"][j])) then
+								C_GossipInfo.SelectOption(index)
+							end
 						end
 					end
-				end
-				for id, _ in pairs(creatures) do
-					if id == npcID then -- The target's ID is in the table, so use its configuration.
-						for i = 1, #creatures[id]["gossips"] do
-							if string.find(string.lower(gossipOptionsSubTable["name"]), string.lower(creatures[id]["gossips"][i])) then
-								C_GossipInfo.SelectOption(index)
+					for id, _ in pairs(creatures) do
+						if id == npcID then -- The target's ID is in the table, so use its configuration.
+							for i = 1, #creatures[id]["gossips"] do
+								if string.find(string.lower(gossipOptionsSubTable["name"]), string.lower(creatures[id]["gossips"][i])) then
+									C_GossipInfo.SelectOption(index)
+								end
 							end
 						end
 					end
